force-app/idp/examples/loan-offer-compliance/objects/Case/fields/Interest_Rate_Offered__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Offered__c</fullName>
    <label>Interest Rate Offered</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>