force-app/idp/examples/loan-offer-compliance/objects/Case/fields/Offer_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expiry_Date__c</fullName>
    <label>Offer Expiry Date</label>
    <type>Date</type>
</CustomField>