force-app/idp/examples/loan-offer-compliance/objects/Case/fields/Offer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Offer_Reference__c</fullName>
    <label>Offer Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>