force-app/idp/examples/loan-offer-compliance/objects/Case/fields/Offer_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Offer_Verification_Notes__c</fullName>
    <description
  >Human-readable breakdown written by LoanOfferMismatchHandler.</description>
    <label>Offer Verification Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>