force-app/idp/examples/loan-offer-compliance/objects/Case/fields/Offer_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Verification_Status__c</fullName>
    <description
  >Stamped by LoanOfferMismatchHandler when a compliance run finds differences.</description>
    <label>Offer Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Mismatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>