force-app/idp/examples/loan-offer-compliance/objects/Case/fields/Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Amount__c</fullName>
    <label>Monthly Repayment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>